# code-kata

./: .env  .eslintrc.js  .gitignore  Dockerfile  Gemfile  Makefile  README.md  Read Me  backend.js  commands.txt  directory_tree.txt  docker-compose.yml  frontend.js  index.html  index.js  jest.config.js  main  next.config.js  package-lock.json  package.json  requirements.txt  script.js  server.js  supervisord.conf  tailwind.config.ts  todos.csv  todos.json
accounting-server/: API.md  README.md  dockerfile  package-lock.json  package.json  server.js  vercel.json
api/: db.sqlite3
app/: layout.jsx  layout.tsx  page.jsx  page.tsx  todo_retriever.rb  todo_view.rb
backend/: .gitignore  Dockerfile  README.md  app.js  app.py  package-lock.json  package.json  server.js  supervisord.conf
biz_loan/: package-lock.json  package.json  tsconfig.json
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
components/: BalanceSheet.jsx  Form.jsx  Nav.jsx  Provider.jsx
data/: balanceSheets.json
decision-engine/: README.md  dockerfile  package-lock.json  package.json  server.js
frontend/: .prettierrc  Dockerfile  README.md  index.html  package-lock.json  package.json
go/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  todos.csv
loan-app/: README.md  dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
loanapp/: README.md  package.json  pnpm-lock.yaml  sst.config.ts
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  todos.csv  todos.json
rust/src/: main.rs  output.rs  todo.rs
server/: .env  (+8 more)
(+170 files in other folders)
